# python-project-52

./: .env.example  .gitignore  Makefile  README.md  build.sh  manage.py  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: forms.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: apps.py  forms.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  __init__.py
task_manager/tasks/: __init__.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/templates/: base.html  delete.html  index.html  login.html  users.html
task_manager/templates/labels/: form.html  labels.html
task_manager/templates/statuses/: create.html  delete.html  form.html  statuses.html  update.html
task_manager/templates/tasks/: form.html  task.html  tasks.html
task_manager/templates/users/: create.html  delete.html  update.html  user_form.html  users.html
task_manager/tests/: test_base.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py  test_views.py.py
task_manager/users/: forms.py  urls.py  views.py
