[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = [
    { name = "Regina Khairutdinova", email = "regina.khajrutdinova@gmail.com" }
]
dependencies = [
    "django",
    "python-dotenv",
    "dj-database-url",
    "gunicorn",
    "psycopg2-binary",
    "django-bootstrap5"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"